2002-04-01  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclEnv.c:
	* generic/tclIOUtil.c: invalidate filesystem cache when the
	user changes env(HOME).  Fixes [Bug #535621].  Also cleaned up
	some of the documentation.
	* tests/fileSystem.test: added test for bug just fixed.
	
2002-04-01  Kevin Kenny  <kennykb@acm.org>

	* win/tclWinTime.c (Tcl_GetTime): made the checks of clock
	frequency more permissive to cope with the fact that Win98SE
	is observed to return 1.19318 in place of 1.193182 for the
	performance counter frequency.
	
2002-03-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCmdMZ.c (Tcl_TraceObjCmd, TraceVarProc)
	(TraceCommandProc, TclTraceCommandObjCmd):  corrected
	potential double-free of traces on variables by flagging in
	Trace*Proc that it will free the var in case the eval wants to
	delete the var trace as well. [Bug #536937]
	Also converted Tcl_UntraceVar -> Tcl_UntraceVar2 and Tcl_Eval to
	Tcl_EvalEx in Trace*Proc for slight efficiency improvement.

2002-03-29  Don Porter  <dgp@users.sourceforge.net>

	* doc/AllowExc.3:
	* generic/tclBasic.c (Tcl_EvalObjv,Tcl_EvalEx,Tcl_EvalObjEx):
	* generic/tclCompile.h (TclCompEvalObj):
	* generic/tclExecute.c (TclCompEvalObj,TclExecuteByteCode):
	* tests/basic.test: Corrected problems with Tcl_AllowExceptions
	having influence over the wrong scope of Tcl_*Eval* calls.  Patch
	from Miguel Sofer.  Report from Jean-Claude Wippler.  [Bug 219181]

2002-03-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclVar.c: Refactored CallTraces to collect repeated
	handling of its returned value into CallTraces itself.

2002-03-28  David Gravereaux <davygrvy@pobox.com>

	* tools/feather.bmp:
	* tools/man2help.tcl:
	* tools/man2help2.tcl:
	* win/makefile.vc: More winhelp target fixups.  Added a feather
	bitmap to the non-scrollable area and changed the color to be
	yellow from a plain white.  The colors can be whatever we want
	them to be, but thought I would start with something bold.