@@ -15,7 +15,7 @@
 # Copyright (c) 2000 by Ajuba Solutions
 # All rights reserved.
 #
-# RCS: @(#) $Id: tcltest.tcl,v 1.43 2002/03/27 08:19:57 dgp Exp $
+# RCS: @(#) $Id: tcltest.tcl,v 1.44 2002/04/04 05:36:56 hobbs Exp $
 
 # create the "tcltest" namespace for all testing variables and
 # procedures
@@ -2546,6 +2546,9 @@ proc tcltest::cleanupTests {{calledFromAllFile 0}} {
 #
 # Side Effects:
 #       None
+
+# a lower case version is needed for compatibility with 8.3
+interp alias {} tcltest::getMatchingFiles {} tcltest::GetMatchingFiles
 
 proc tcltest::GetMatchingFiles { {searchDirectory ""} } {
     if {[llength [info level 0]] == 1} {
